blockchain structure working

--- a/block.html
+++ b/block.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet preload" href="/static/css/default.css" as="style">
     <link rel="stylesheet preload" href="/static/css/layout.css" as="style">
     <link rel="stylesheet preload" href="/static/css/media-queries.css" as="style">
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <title>Blockchain</title>
 </head>
 
